<resources>

    <string name="app_name">Trivia Quest</string>
    <string name="salutation">Welcome</string>
    <string name="please_wait">please wait</string>
    <string name="enter_name">Please enter your name</string>
    <string name="hint_name">Name</string>
    <string name="start">start</string>
    <string name="categories">Categories</string>
    <string name="content_description">image</string>
    <string name="difficulty_easy">Easy</string>
    <string name="difficulty_medium">Medium</string>
    <string name="difficulty_hard">Hard</string>
    <string name="submit">Submit</string>
    <string name="title_categories">Categories</string>
    <string name="title_difficulty">Difficulty</string>
    <string name="btn_final_question_text">Finish</string>
    <string name="confirm_cancel">Are you sure?</string>
    <string name="confirm_cancel_text">You will lose the current round. You\'ve come this far, are you sure you want to quit?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="answer_wrong">Wrong</string>
    <string name="answer_correct">Correct</string>
    <string name="answer_timeout">Time Out!</string>
    <string name="enter_name_error">Name cannot be blank</string>
    <string name="finish">Finish</string>

</resources>