<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="@dimen/primary_layout_padding"
    tools:context=".activities.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="@dimen/primary_heading_text_size"
        android:textStyle="bold"
        android:layout_margin="@dimen/primary_layout_margin"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/card_elevation"
        app:cardCornerRadius="@dimen/card_corner_radius"
        android:layout_margin="@dimen/primary_layout_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/primary_layout_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/salutation"
                android:textSize="@dimen/large_heading_text_size"
                android:textColor="@color/primary_text_color"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_name"
                android:textSize="@dimen/primary_text_size"
                android:textColor="@color/secondary_text_color"
                android:layout_margin="@dimen/primary_layout_margin"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/primary_layout_margin"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_name"
                    android:imeOptions="actionGo"
                    android:inputType="text"
                    android:textColorHint="@color/colorFaded"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnStart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:backgroundTint="@null"
                android:background="@drawable/shape_btn_background"
                android:minHeight="@dimen/btn_min_height"
                android:text="@string/start"
                android:textSize="@dimen/secondary_text_size"
                android:paddingTop="@dimen/small_layout_padding"
                android:paddingBottom="@dimen/small_layout_padding"
                android:layout_margin="@dimen/primary_layout_margin"
                />

        </LinearLayout>
        
    </androidx.cardview.widget.CardView>


</LinearLayout>