<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="@dimen/secondary_layout_padding"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/confirm_cancel"
        android:textSize="@dimen/secondary_text_size"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/primary_layout_padding"
        android:text="@string/confirm_cancel_text"
        android:textSize="16sp"
        android:textColor="@color/primary_text_color"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/btn_min_height"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnNo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/btn_min_height"
            android:layout_weight="1"
            android:text="@string/no"
            android:textColor="@color/white"
            android:textSize="@dimen/primary_text_size"
            app:backgroundTint="@null"
            android:background="@drawable/shape_btn_cancel_background"
            android:gravity="center"
            android:padding="@dimen/primary_layout_padding"
            android:layout_marginEnd="@dimen/primary_layout_margin"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnYes"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:minHeight="@dimen/btn_min_height"
            android:layout_weight="1"
            android:text="@string/yes"
            android:textColor="@color/white"
            android:textSize="@dimen/primary_text_size"
            app:backgroundTint="@null"
            android:background="@drawable/shape_btn_background"
            android:gravity="center"
            android:padding="@dimen/primary_layout_padding"
            android:layout_marginStart="@dimen/primary_layout_margin"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

</LinearLayout>