<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".activities.DifficultyActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.TriviaQuest.AppBarOverlay">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarDifficulty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.TriviaQuest.PopupOverlay" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="bottom|center_horizontal"
        android:layout_weight="1"
        android:padding="@dimen/primary_layout_padding">
        <TextView
            android:id="@+id/tvDifficultyEasy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/difficulty_easy"
            android:gravity="center"
            android:textSize="@dimen/large_heading_text_size"
            android:textColor="@color/primary_text_color"
            android:textStyle="bold"
            android:padding="@dimen/primary_layout_padding"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="1"
        android:padding="@dimen/primary_layout_padding">
        <TextView
            android:id="@+id/tvDifficultyMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/difficulty_medium"
            android:gravity="center"
            android:textSize="@dimen/large_heading_text_size"
            android:textColor="@color/primary_text_color"
            android:textStyle="bold"
            android:padding="@dimen/primary_layout_padding"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_weight="1"
        android:padding="@dimen/primary_layout_padding">

        <TextView
            android:id="@+id/tvDifficultyHard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/difficulty_hard"
            android:gravity="center"
            android:textSize="@dimen/large_heading_text_size"
            android:textColor="@color/primary_text_color"
            android:textStyle="bold"
            android:padding="@dimen/primary_layout_padding"
            />
    </LinearLayout>


</LinearLayout>